Aug 12 2002  2.5.2  Passing of card type param to packet sources
                    BSD cisco handing of additional 2 bytes in the middle of
                     the packet (WHY are those there?)
                    BSD prism2 handling of additional bytes in the middle of
                     the packet
Aug 08 2002  2.5.2  More fixes to the expat include order to eliminate errors
                     on some systems.
                    BSD include fixes for detecting wtaplib and tweaks to the
                     bsd pcap interface
Aug 07 2002  2.5.2  More speech changes
Aug 06 2002  2.5.2  Fixed preprocessor problem in pcapsource.cc
                    Maybe fixed speech
Aug 03 2002  2.5.2  Started 2.5.2 development tree.

Aug 03 2002  2.4.6  Released 2.4.6 with numerous bugfixes to the 2.4.5 code.

Aug 03 2002  2.5.1  Fixed include order in expat.cc
                    Added "simpleborder" pref option to use non-high-ascii
                     border chars (mainly zaurus, but some other terminals
                     might need this)
                    Changed default waypoint file to way_kismet.txt
Aug 02 2002  2.5.1  Fixed sound playing completely (I hope)
                    Squished segfault-on-quit due to improper deleting of 
                     objects
                    Improved graphics in the panels interface to use solid 
                     lines if the curses implementation defines them.  (Now
                     maybe Dave will stop bugging me. :P )
Aug 01 2002  2.5.1  Added stderr and stdout suppression to the sound playing
                     binary forks
                    Added kill signal to sound and speech pids to stop them
                     when we exit.
Jul 31 2002  2.5.1  Made packetsignatures.h bsd-friendly and added a BSD
                     prism2 unmonitor (Dave Worth)
                    More memory alignment errors in tcpclient fixed.
Jul 30 2002  2.5.1  Started 2.5.1 development tree
