@@ -26,6 +26,8 @@
 #include <inttypes.h>
 #endif
 
+const uint8_t LOR_MAC[] = {0x01, 0x00, 0x00, 0x00, 0x20, 0xF6};
+
 const int LLC_OFFSET = 0;
 
 const uint8_t CISCO_SIGNATURE[] = {0xAA, 0xAA, 0x03, 0x00, 0x00, 0x0C, 0x20, 0x00};
