@@ -1,3 +1,5 @@
+Aug 14 2002  2.5.2  Preliminary detection of Lucent Outdoor Router equip
+                     thanks to Steve's dumps.
 Aug 12 2002  2.5.2  Passing of card type param to packet sources
                     BSD cisco handing of additional 2 bytes in the middle of
                      the packet (WHY are those there?)
